Implemented further functionality for WebAPI to support iOS app